Set sequential focus navigation starting point on scrollIntoView()

BUG=594613

Review URL: https://codereview.chromium.org/1810293002

Cr-Commit-Position: refs/heads/master@{#382522}

Former-commit-id: 0bb887b20c70582eeafad2a58ac1650b7159f2b6